<resources>
    <string name="app_name">Threadly</string>
    <string name="usernameFieldHint">Email or mobile number</string>
    <string name="password_field_hint">Password</string>
    <string name="login_btn_txt">Log in</string>
    <string name="forgot_password_btn">Forgot password?</string>
    <string name="create_new_account_txt">Create new account</string>
    <string name="parent_company_name">R-technologies</string>
    <string name="mobile_number_ask">What’s your mobile number?</string>
    <string name="signup_screen_mobilephrase">Enter the mobile number where you can be contacted. No one will see this on your profile.</string>
    <string name="mobile_number_placeHolder">Mobile number</string>
    <string name="phone_number_info_phrase">You may receive WhatsApp and SMS notifications from us for security and login purposes.</string>
    <string name="email_info_phrase">You may receive Emails from us for security and login purposes.</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="next">Next</string>
    <string name="sign_up_with_mobile_number">Sign up with mobile number</string>
    <string name="email">Email</string>
    <string name="signUp_with_email_phrase">Enter you email where you can be contacted. No one will see this on your profile.</string>
    <string name="page_ask_email">What\'s your Email?</string>
    <string name="create_a_password_txt">Create a password</string>
    <string name="create_password_phrase_txt">Create a password with at least 6 letters or numbers. it should be something others can’t guess.</string>
    <string name="password">Password</string>
    <string name="resend_otp_message">I didn\'t get the code</string>
    <string name="otp_confirmation_phrase">Enter the confirmation code</string>
    <string name="enter_confirmation_code_phrase">To confirm you account, enter the 6-digit code we sent via SMS to placeholder</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="what_s_your_birthday">What’s your birthday?</string>
    <string name="dob_phrase">Use your own birthday, even if this account is for a business, a pet or something else. No one will see this unless you choose to share it.</string>
    <string name="faq_dob">Why do i need to provide my birthday?</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="full_name">Full name</string>
    <string name="number_lessthan_10_err">Looks like your mobile number may be incorrect try rechecking your number</string>
    <string name="empty_number">Looks like you have not entered your mobile number </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bioSample">\@Rashid ekabl btech cse computer science student lloking forward for job oppurtinity</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="download">Download</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="people_you_might_know">People you might know</string>
    <string name="follows_you">Follows you</string>
    <string name="not_follows_you">Not Follows You</string>
    <string name="forget_password">Forget Password</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="search_followers">Search Followers</string>
    <string name="following">Following</string>
    <string name="search_user">search user</string>
    <string name="male">Male</string>
    <string name="edit_grid">Edit grid</string>
    <string name="New">New</string>
    <string name="more_highlights">More Highlights</string>
    <string name="gender">Gender</string>
    <string name="add_music_to_your_profile">Add music to your profile</string>
    <string name="music">Music</string>
    <string name="nothing_intresting">nothing intresting</string>
    <string name="bio">Bio</string>
    <string name="add_banners">Add banners</string>
    <string name="add_links">Add links</string>
    <string name="rasid_ekbal">Rasid ekbal</string>
    <string name="pronouns">Pronouns</string>
    <string name="miaisback">miaisback</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="name_change_warning">you can only change you name twice within 15 days.</string>
    <string name="name_visibility_info">your name is visible to everyone on and off Threadly.</string>
    <string name="username_visibility_info">your name is visible to everyone on and off Threadly.</string>
    <string name="why_adding_name_info">Help people discover your account by using the name you\'re known by: either full name, nick name, or buisness name.</string>
    <string name="learn_more">Learn more.</string>
    <string name="username_change_info">In most cases, you will be able to change your username back to your original for another 14 days.</string>
    <string name="emptyUserNameError">Username cannot be empty.</string>
    <string name="usernameLengthError">Username must be at least 6 characters long.</string>
    <string name="usernameTooLongError">Username cannot be more than 20 characters long.</string>
    <string name="usernameContaminationError">Username can only contain letters, numbers, and underscores.</string>
    <string name="usernameExists">Username already exists, please try another one</string>
    <string name="something_wentWrong">Something went wrong, please try again later</string>
    <string name="emptyUserName">Name cannot be empty.</string>
    <string name="nameLengthError">Name must be at least 3 characters long or shorter than 20 characters</string>
    <string name="bioEmptyWarning">Bio cannot be empty</string>
    <string name="BioLengthWarning">Bio cannot be longer than 150 characters</string>
    <string name="permission_required">Permission Required</string>
    <string name="new_post">New Post</string>
    <string name="recents">Recents</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="save_draft">Save draft</string>
    <string name="share">Share</string>
    <string name="photo">Photo</string>
    <string name="done">Done</string>
    <string name="no_posts">No Posts</string>
    <string name="playbtn">playBtn</string>
    <string name="likes">Likes</string>
    <string name="addstory">Add Story</string>
    <string name="your_story">Your Story</string>
    <string name="settings_and_activity_heading">Settings and activity</string>
    <string name="search">Search</string>
    <string name="your_account">Your account</string>
    <string name="how_you_use_threadly">How you use Threadly</string>
    <string name="saved">Saved</string>
    <string name="archived">Archive</string>
    <string name="who_can_see_your_content">Who can see your content</string>
    <string name="blocked">Blocked</string>
    <string name="log_out">Log out</string>
    <string name="hide_like_count">Hide like count</string>
    <string name="hide_share_count">Hide share count</string>
    <string name="turn_off_commenting">Turn off commenting</string>
    <string name="edit_caption">Edit caption</string>
    <string name="delete">Delete</string>
    <string name="message_hint">Message...</string>
    <string name="suggested_users">People you might know</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="notifications">Notifications</string>
    <string name="started_following_you">Started Following you</string>
    <string name="follow_back">follow back</string>
    <string name="profilepic">profilePic</string>
    <string name="image_media">image media</string>
    <string name="message_status_icon">message status icon</string>
    <string name="select_media">Select Media</string>
    <string name="send">send</string>
    <string name="userid">userId</string>
    <string name="private_account">Private Account</string>
    <string name="privacy_setting_desc1"><![CDATA[When your account is public, your profile and posts can be seen by anyone, on or off threadly, even if they don\'t have an threadly account.]]></string>
</resources>