<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnterDobActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_birthday"
        android:paddingHorizontal="@dimen/dp_20"
        android:textSize="@dimen/sp_25"
        android:layout_marginTop="@dimen/dp_50"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob_phrase"
        android:textSize="@dimen/sp_17"
        android:paddingStart="@dimen/dp_19"
        android:paddingEnd="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_13"
        tools:ignore="RtlSymmetry"
        android:textColor="@color/DarkGreyText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_dob"
        android:textSize="@dimen/sp_17"
        android:paddingStart="@dimen/dp_19"
        android:paddingEnd="@dimen/dp_12"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry"
        android:textColor="#0066E7"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_25">
        <EditText
            android:id="@+id/dob_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:paddingVertical="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_14"
            android:hint="@string/enter_date_of_birth"
            android:textAlignment="center"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@color/black"
            android:textColorHint="@color/DarkGreyText"
            android:background="@drawable/edit_text_style_2"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:text="@string/next"
            android:background="@drawable/login_btn_background"
            android:textColor="@color/AllWhite"
            android:layout_marginTop="@dimen/dp_5"
            android:textSize="@dimen/sp_16"
            android:textAllCaps="false"
            android:layout_marginVertical="@dimen/dp_76"
            />
    </RelativeLayout>

</LinearLayout>