<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpEmailActivity"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_width="@dimen/dp_257"
        android:layout_height="wrap_content"
        android:text="@string/page_ask_email"
        android:paddingHorizontal="@dimen/dp_20"
        android:textSize="@dimen/sp_25"
        android:layout_marginTop="@dimen/dp_50"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp_with_email_phrase"
        android:textSize="@dimen/sp_17"
        android:paddingStart="@dimen/dp_19"
        android:paddingEnd="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_13"
        tools:ignore="RtlSymmetry"
        android:textColor="#3B3838"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_25">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_62"
            android:hint="@string/email"
            android:inputType="phone"
            android:paddingVertical="@dimen/dp_20"
            android:paddingHorizontal="@dimen/dp_14"
            android:textSize="@dimen/sp_15"
            android:background="@drawable/edit_text_style_2"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_20">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:text="@string/next"
                android:background="@drawable/login_btn_background"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_5"
                android:textSize="@dimen/sp_16"
                android:textAllCaps="false"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SignUp_with_mobile_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:text="@string/sign_up_with_mobile_number"
                android:background="@drawable/grey_border_box_btn"
                android:textColor="#4D4B4B"
                android:textSize="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_15"
                android:textAllCaps="false"
                android:textStyle="normal"

                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>